governance-shared/baselines/3.19.0/ChronoPM-Project/assets/templates/wp-template.md
---
doc_type: work-package
wp_id: WP-YYYYMMDD-NNN
project: [子项目名]
plan_ref: PLAN-YYYYMMDD-NNN
status: 待确认
effect: 正常
superseded_by: —
created_at: YYYY-MM-DD
completed_at: —
retired_at: —
related_wps:
  upstream: []    # 前置 WP 编号；SSOT。改链须待确认 + pm-decisions
  downstream: []  # 后继 WP 编号
---

# WP-YYYYMMDD-NNN - {WP 名称}

> 头状态：`待确认` / `已规划` / `进行中` / `已完成`。禁止写入「废弃」。新建默认待确认；待确认不拆待办、不进计划时间盒。
> 生效 `effect`：`正常` / `废弃`（缺省=正常）。废弃必填 `superseded_by`。废弃不把「废弃」写入 §7 到状态。
> 「待评审」是评审门派生结论，不写入 status。
> 无需求编号禁止建包。工作包只存需求编号（及可选路径），禁止抄需求描述或验收标准。
> `plan_ref` 可多值：`PLAN-YYYYMMDD-NNN / PLAN-YYYYMMDD-NNN`，只含 **正常** 计划；§1 所属计划回显该字段，禁止第二份名单。
> WP §3（功能点）= 实体/功能点当前站 + 阶段推进留痕。§7/§8 的「阶段」= 整包进度阶段。禁止把整包阶段写进功能点当前表当唯一历史。

## 1. 基本信息
| 字段 | 值 |
|---|---|
| WP 编号 | WP-YYYYMMDD-NNN |
| WP 名称 | [名称] |
| 所属阶段 | M0X |
| 负责人 | [姓名] |
| 执行人 | [自动聚合下辖待办 owner，纯派生不落盘] |
| 开始时间 | YYYY-MM-DD |
| 结束时间 | YYYY-MM-DD |
| 生效 | 正常 / 废弃（回显 effect） |
| 所属计划 | 回显 frontmatter plan_ref |
| 关联需求 | REQ-xxx / — |

## 2. 关联需求（强制字段，只留编号）
| 需求编号 | 来源路径 |
|---|---|
| REQ-xxx | requirements/requirement-register.md / sources/SRC-NNN / — |

> 只写编号，可选路径指针。禁止把功能描述、验收标准抄进本表。搜不到需求 → 禁止建包，进决策文件。存量空值不强制回填。

## 2b. 关联工作包（可选，v3.16.0）

> 表达 WP 间前置/后继。**SSOT = front matter `related_wps`**；本表为展示投影。index「上游 WP / 下游 WP」为加速器。建链/改链须待确认并登记 pm-decisions。禁止自指。环 → pm-decisions。缺文件走 D20，不建幽灵 WP。改 upstream 必须在对端 downstream 互指（反之亦然）。废弃时走 P-WP-RETIRE 清对端。

| 关系类型 | 关联 WP 编号 |
|---|---|
| 前置 WP（本 WP 依赖） | WP-xxx / — |
| 后继 WP（依赖本 WP） | WP-aaa / — |

## 3. 实体/功能点行（v3.19.0）

> 工作包来源于需求，绑需求为索引。本表功能点 = 该包要做的功能描述。
> **本表「阶段」= 该功能点自己走到整包十三阶段中的哪一站，不是工作包整包阶段。整包阶段见本文件阶段清单。全部功能点到达同一阶段时，整包阶段自动跟上并记变更。**
> 当前状态只表该功能点自身（✅🔄🔨📋⏳—），与整包阶段无直接相等关系。
> 无独立 entity-registry。跨实体大 WP 用本表表达。无本表的简单包不走全齐推进。
> 禁止按功能点划分迭代；不同计划要做同一包里不同功能 → PM 拆成两个工作包。
> 旧看板 T-xxx 不得当 TD 回填，标 `T-xxx（待校准）`。

| 实体或功能点 | 当前状态 | 阶段 | 关联待办 | 备注 |
|---|---|---|---|---|
| [实体名] | ✅🔄🔨📋⏳— | 需求登记…上线（与本包阶段清单行名相同）/ — | TD-… / T-xxx（待校准） / — | |

> 本表只关联待办编号，禁止混写需求编号。需求只出现在 §2。已删除「阶段归属」列。
> **模块/整包级待办**（标题或备注含「全模块/整包/全部功能点」，或 PM 点名）须回填所有适用功能点的关联待办列。禁止猜「后端=所有行」。
> 本表**不存执行人**。人在待办 Owner；§8 为投影。问「这个功能点当前谁做」读本列 TD → Owner。问「谁做过某站」读下方留痕。

#### 功能点阶段推进留痕（只追加）

> 推进功能点「阶段」列的同一回合必须追加至少一行。禁止改行、删行。超 30 行：近 30 留本表，更早收到同文件「历史功能点留痕」。
> 执行人可写在本子表（不是上面当前状态表加列）。来源 TD 对齐 §8b。

| 时间 | 从阶段 | 到阶段 | 执行人 | 来源 TD |
|---|---|---|---|---|
| YYYY-MM-DD | 预演 | 测试 | [姓名] | TD-… |

### 评审门清单（可选）

> 简单 WP 整节省略。本清单状态不再回写功能点「阶段」列（功能点阶段只表该点自身）。
> WP 头 status：待确认 / 已规划 / 进行中 / 已完成。不得写入「待评审」。
> 「WP 待评审」= 本清单尚有未通过的门，属派生结论，不落入 status 字段。

| 评审门 | 评审对象 | 评审人 | 状态 | 评审待办 | 通过日期 |
|---|---|---|---|---|---|
| 需求评审 | REQ-xxx | [姓名] | 已通过 / 待评审 / 未开始 | TD-… / — | YYYY-MM-DD |
| 设计评审 | [设计文档] | [姓名] | 已通过 / 待评审 / 未开始 | TD-… / — | YYYY-MM-DD |
| 测试用例评审 | [用例集] | [姓名] | 已通过 / 待评审 / 未开始 | TD-… / — | YYYY-MM-DD |

## 4. 下辖待办（派生视图，AI 实时聚合）

> 从 `todos/{date}/{owner}.md` 按 WP Ref 实时聚合，**不落盘**。改待办 WP Ref **不得**回写本段。
> 默认待办清单只列未办结。查看本 WP / 问「谁参与过」时**包含已办结**，汇总参与者去重 + 最早开始~最晚结束。优先可读 §8 已落盘人期。

## 4b. 关联记录（只追加，v3.17.0）

> 过程正文在待办备注/工作日志。本表只留一行一句 + 编号。禁止把同一段话复制到多个登记册。
> 去重键：本包 + TD + 一句话去掉空白和中英文标点后完全相同。不语义合并。
> 默认只盖该待办 WP Ref 那一包。仅 PM 点名的其它包才加盖。
> 确认人：客户敲定 → 客户名；办结自动 → `—`；手动补录 → 操作人。
> 超 30 行：近 30 留本表，更早收到同文件「历史关联记录」，不搬出本文件。

| 日期 | 一句话 | 来源 | 确认人 |
|---|---|---|---|
| YYYY-MM-DD | [结论一句] | TD-… / I-… / D-… / MTG-… | 客户名 / — / 操作人 |

## 5. 风险/问题
| Ref | 类型 | 描述 | 状态 |
|---|---|---|---|
| R-xxx / I-xxx | 风险/问题 | [描述] | [状态] |

> 凡 WP §3（功能点） / §8 / 正文出现 R-/I- 引用，本表**必填对应行**。禁止用自定义「关联/依赖」把风险与待办混排。04 号不加回指。无引用时可写「无」。

## 6. 变更记录
> 非状态类变更（时间盒/负责人/需求绑定等）。状态/阶段转移只进 §7。

| 时间 | 变更内容 | 原因 | 操作人 |
|---|---|---|---|
| YYYY-MM-DD | [变更] | [原因] | [姓名] |

## 7. 状态历史（只追加）

> 当前状态 = 末行「到状态」。禁止改行、删行、插行。更正靠追加接链。
> 触发推进的典型事件：需求定稿 / 开发完成 / 让步包发布 / 测试开始 / 测试通过 / 上线。只追加；废弃不写到状态。

| 时间 | 从状态 | 到状态 | 备注 | 执行人 |
|---|---|---|---|---|
| YYYY-MM-DD | — | 待确认 | 建包 | [姓名] |

## 8. 阶段清单

> 标准 13 阶段（可增删）。执行人多人以「、」隔开。排期=所有执行人时间汇总。点名标「(点名)」写在执行人格。AI 聚合标「(AI聚合)」。空岗：⏳ + `⚠️待安排人` / `— 待排期`。
> **字段边界硬约束（v3.16.0）**：五列中只约束执行人/排期。**执行人**栏仅人名/分工（多人以「、」隔开）。**放行** `(点名)` / `(AI聚合)` / `⚠️待安排人`。**禁止**夹带日期/时间/括号注记。**排期**栏仅时间：区间 `YYYY-MM-DD~YYYY-MM-DD`；多离散日 `YYYY-MM-DD, YYYY-MM-DD`；无排期 `— 待排期`。回填/投影时执行人栏含日期特征 → 标记 `⚠️ 字段边界待纠正`，不自动改写。
> 数据：待办 → P-WP-SCAN → 本表（单向）。点名不覆盖。已完成阶段人期冻结。
> 包级覆盖（误匹配纠正，可选）：排除：… / 别名：…
> 图标：✅ 已完成 / 🔄 进行中 / ⏳ 待安排。关键阶段=是 的阶段投影到计划 §3 第 6 列。

| 阶段 | 状态 | 执行人 | 排期 | 关键阶段 |
|---|---|---|---|---|
| 需求登记 | ⏳ | ⚠️待安排人 | — 待排期 | 否 |
| 需求调研 | ⏳ | ⚠️待安排人 | — 待排期 | 否 |
| 需求规划 | ⏳ | ⚠️待安排人 | — 待排期 | 否 |
| 需求评审 | ⏳ | ⚠️待安排人 | — 待排期 | 否 |
| 需求确认 | ⏳ | ⚠️待安排人 | — 待排期 | 否 |
| 方案设计 | ⏳ | ⚠️待安排人 | — 待排期 | 否 |
| 用例设计 | ⏳ | ⚠️待安排人 | — 待排期 | 否 |
| 开发 | ⏳ | ⚠️待安排人 | — 待排期 | 否 |
| 预演 | ⏳ | ⚠️待安排人 | — 待排期 | 否 |
| 测试 | ⏳ | ⚠️待安排人 | — 待排期 | 否 |
| 内部验收 | ⏳ | ⚠️待安排人 | — 待排期 | 否 |
| 试运行 | ⏳ | ⚠️待安排人 | — 待排期 | 否 |
| 上线 | ⏳ | ⚠️待安排人 | — 待排期 | 是 |

## 8b. 阶段人期来源（只追加）

> 派生留痕，不是人的 SSOT。SSOT=待办 Owner。改 §8 执行人/冻结状态的同一回合必须追加至少一行。缺行=级联未完成。
> 动作只允许：聚合 / 冻结 / 冻结补人 / 解冻 / 点名。禁止「重算清空」。
> 超 30 行：近 30 留本表，更早收到同文件「历史人期来源」。

| 时间 | 阶段 | 动作 | 姓名 | 来源 TD |
|---|---|---|---|---|
| YYYY-MM-DD | 开发 | 冻结 | 张三 | TD-xxx |

updated: YYYY-MM-DD HH:mm
